--- a/cars/index.html
+++ b/cars/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>My CarApp</title>
         <meta charset="UTF-8">    
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="http://unpkg.com/mithril/mithril.js" defer></script>
-        <script src="main.js" defer></script>
+        <script src="main2.js" defer></script>
     </head>
     <body>
     </body>
