--- a/prick/index.html
+++ b/prick/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Click to Prick</title>
-        <meta charset='UTF-8'>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <script src="http://unpkg.com/mithril/mithril.js" defer></script>
-        <script src="main.js" defer></script>
-    </head>
+	<head>
+		<title>Click to Prick</title>
+		<meta charset='UTF-8'>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
+		<script src="http://unpkg.com/mithril/mithril.js" defer></script>
+		<script src="main.js" defer></script>
+	</head>
 
-    <body>
-    </body>
+	<body>
+	</body>
 </html>
