Got unsplash api cranking.

--- a/weather/index.html
+++ b/weather/index.html
@@ -10,57 +10,12 @@
 			@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 	</style>
 	<script src="https://unpkg.com/mithril/mithril.js" defer></script>
+	<script src="util.js" defer></script>
 	<script src="main.js" defer></script>
+	
 </head>
 
 <body>
-	<header>
-		<a href="https://unsplash.com/@helenwilliams?utm_source=your_app_name&utm_medium=referral">Helen Williams</a> on <a href="https://unsplash.com/?utm_source=your_app_name&utm_medium=referral">Unsplash</a>
-	</header>
-	
-	<div class="current">
-		<h1>72&deg;</h1>
-		<h2>Tuesday</h2>
-		<h3>September 22, 2018</h3>
-	</div>
-	
-	<div class="location">
-		<h2 id="city-text">Roanoke, VA</h2>
-	</div>
-	
-	<footer>
-		<table>
-			<tr>
-				<td>
-					<div class="forecast-group">
-						<p class="forecast-deg">86&deg;</p>
-						<img src="img/rain.png" class="icon" alt="weather icon">
-						<p class="forecast-day">Monday</p>
-					</div>
-				</td>
-				<td>
-					<div class="forecast-group>
-						<p class="forecast-deg">76&deg;</p>
-						<img src="img/rain.png" class="icon" alt="weather icon">
-						<p class="forecast-day">Tuesday</p>
-					</div>
-				</td>
-				<td>
-					<div class="forecast-group">
-						<p class="forecast-deg">75&deg;</p>
-						<img src="img/rain.png" class="icon" alt="weather icon">
-						<p class="forecast-day">Wednesday</p>
-					</div>
-				</td>
-				<td>
-					<div class="forecast-group">
-						<p class="forecast-deg">77&deg;</p>
-						<img src="img/rain.png" class="icon" alt="weather icon">
-						<p class="forecast-day">Thursday</p>
-					</div>
-				</td>
-			</tr>
-			</table>
-	</footer>
+	<p>loading</p>
 </body>
 </html>
