--- a/pupscriptions/index.html
+++ b/pupscriptions/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Muli:300,400,700" rel="stylesheet">
 	<script src="https://unpkg.com/mithril/mithril.js" defer></script>
 	<script src="main.js" defer></script>
 </head>
