--- a/pupscriptions/index.html
+++ b/pupscriptions/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Zilla+Slab:400,500,700" rel="stylesheet">
 	<script src="https://unpkg.com/mithril/mithril.js" defer></script>
 	<script src="main.js" defer></script>
 </head>
